Fix yaml comment

--- a/Resources/travis/app/config/parameters.yml
+++ b/Resources/travis/app/config/parameters.yml
@@ -1,6 +1,6 @@
 ################################################################
- Default container parameters in test environment (DB settings
- adapted to travis).
+# Default container parameters in test environment (DB settings
+# adapted to travis).
 ################################################################
 
 parameters:
