--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "php": ">=5.4.1",
         "phpunit/phpunit": "~4.6",
         "fabpot/php-cs-fixer":"^1.10",
-        "mikey179/vfsStream": "~1.5"
+        "mikey179/vfsStream": "~1.5",
+        "claroline/core-bundle": ">=5.1.14"
     },
     "autoload": {
         "psr-0": { "Claroline\\DevBundle": "" }
