Switch to psr-4 autoloading

--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,13 @@
     "homepage": "http://www.claroline.net",
     "license": "GPL-3.0+",
     "require": {
-        "php": ">=5.4.1",
+        "php": ">=5.5",
         "phpunit/phpunit": "~4.6",
         "fabpot/php-cs-fixer":"^1.10",
         "mikey179/vfsStream": "~1.5",
         "claroline/core-bundle": ">=5.1.14"
     },
     "autoload": {
-        "psr-0": { "Claroline\\DevBundle": "" }
-    },
-    "target-dir": "Claroline/DevBundle"
+        "psr-4": { "Claroline\\DevBundle\\": "" }
+    }
 }
