--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "phpunit/phpunit": "~4.6",
         "fabpot/php-cs-fixer":"^1.10",
         "mikey179/vfsStream": "~1.5",
-        "claroline/core-bundle": ">=5.1.14"
+        "claroline/core-bundle": ">=5.1.14",
+        "symfony/phpunit-bridge": "*"
     },
     "autoload": {
         "psr-0": { "Claroline\\DevBundle": "" }
